(data fetch procy + api not work)

--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +11,12 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">.</span>
+            <!-- <span id="quote">What you are is what you have been. What you'll be is what you do now.</span> -->
+            <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote-author">
+            <!-- <span id="author">Buddha</span> -->
             <span id="author"></span>
         </div>    
         <div class="button-container">
